<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zxinfotek</groupId>
    <artifactId>zx-tms</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>zx-tms</name>
    <description>TMS 终端管理系统后端</description>

    <modules>
        <module>tms-common</module>
        <module>tms-crypto</module>
        <module>tms-infra</module>
        <module>tms-task</module>
        <module>tms-core</module>
        <module>tms-activation</module>
        <module>tms-ota</module>
        <module>tms-rki</module>
        <module>tms-admin</module>
        <module>tms-gateway</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <spring-boot.version>3.2.12</spring-boot.version>
        <lombok.version>1.18.34</lombok.version>
        <mybatis-plus.version>3.5.7</mybatis-plus.version>
        <easyexcel.version>3.3.4</easyexcel.version>
        <commons-io.version>2.16.1</commons-io.version>
        <springdoc.version>2.3.0</springdoc.version>
        <minio.version>8.5.11</minio.version>
        <bouncycastle.version>1.78.1</bouncycastle.version>
        <archunit.version>1.3.0</archunit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
            <!-- EasyExcel 依赖的 POI 5.2 需要 commons-io 2.12 以上，覆盖 Spring Boot 管理的较低版本 -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcpkix-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.zxinfotek</groupId>
                <artifactId>tms-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zxinfotek</groupId>
                <artifactId>tms-crypto</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zxinfotek</groupId>
                <artifactId>tms-infra</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zxinfotek</groupId>
                <artifactId>tms-task</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zxinfotek</groupId>
                <artifactId>tms-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zxinfotek</groupId>
                <artifactId>tms-activation</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zxinfotek</groupId>
                <artifactId>tms-ota</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zxinfotek</groupId>
                <artifactId>tms-rki</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <parameters>true</parameters>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
